--- a/Booking/Views/Home/_Camere.cshtml
+++ b/Booking/Views/Home/_Camere.cshtml
@@ -1,5 +1,16 @@
 ﻿@model Booking.Models.RicercaCamere
 
+@{
+    // Recupera i valori dei cookie
+    var dataInizio = Request.Cookies["DataInizio"]?.Value;
+    var dataFine = Request.Cookies["DataFine"]?.Value;
+    var destinazione = Request.Cookies["Destinazione"]?.Value;
+
+    // Converte i valori dei cookie in DateTime se non sono null
+    DateTime? dataInizioDate = string.IsNullOrEmpty(dataInizio) ? (DateTime?)null : DateTime.Parse(dataInizio);
+    DateTime? dataFineDate = string.IsNullOrEmpty(dataFine) ? (DateTime?)null : DateTime.Parse(dataFine);
+}
+
 
 @using (Html.BeginForm("RicercaCamere", "Camere", FormMethod.Post))
 {
@@ -12,20 +23,20 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Citta, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Citta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Citta, new { htmlAttributes = new { @class = "form-control", Value = destinazione } })
                 @Html.ValidationMessageFor(model => model.Citta, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <label for="DataInizio" class="label-form">@Html.Raw("<strong>Data inizio</strong>")</label>
-            @Html.TextBoxFor(model => model.DataInizio, "{0:yyyy-MM-dd}", new { type = "date" })
+            @Html.TextBoxFor(model => model.DataInizio, "{0:yyyy-MM-dd}", new { type = "date", Value = dataInizioDate?.ToString("yyyy-MM-dd") })
             @Html.ValidationMessageFor(model => model.DataInizio, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
             <label for="DataFine" class="label-form">@Html.Raw("<strong>Data fine</strong>")</label>
-            @Html.TextBoxFor(model => model.DataFine, "{0:yyyy-MM-dd}", new { type = "date" })
+            @Html.TextBoxFor(model => model.DataFine, "{0:yyyy-MM-dd}", new { type = "date", Value = dataFineDate?.ToString("yyyy-MM-dd") })
             @Html.ValidationMessageFor(model => model.DataFine, "", new { @class = "text-danger" })
         </div>
 
