--- a/Booking/Views/Shared/_Layout.cshtml
+++ b/Booking/Views/Shared/_Layout.cshtml
@@ -60,8 +60,10 @@
             <span class="option-text">Recensioni</span>
         </li>
         <li class="option" style="--i:1;">
-            <i class="fa-regular fa-user icon"></i>
-            <span class="option-text">Preferiti</span>
+            <a href="@Url.Action("Preferiti", "Preferiti")">
+                <i class="fa-regular fa-user icon"></i>
+                <span class="option-text">Preferiti</span>
+            </a>
         </li>
     </ul>
 
@@ -73,6 +75,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jqueryval")
+
     @RenderSection("scripts", required: false)
 
     <script src="~/Scripts/myScripts/dropdown.js"></script>
