--- a/Booking/Views/Struttura/DettaglioStruttura.cshtml
+++ b/Booking/Views/Struttura/DettaglioStruttura.cshtml
@@ -1,8 +1,24 @@
 ﻿@model Booking.Struttura
 
 @{
-    DateTime dataInizio = DateTime.Parse(Request.Cookies["DataInizio"].Value);
-    DateTime dataFine = DateTime.Parse(Request.Cookies["DataFine"].Value);
+    DateTime dataInizio;
+    DateTime dataFine;
+
+    if (Request.Cookies["DataInizio"] != null && Request.Cookies["DataFine"] != null)
+    {
+        dataInizio = DateTime.Parse(Request.Cookies["DataInizio"].Value);
+        dataFine = DateTime.Parse(Request.Cookies["DataFine"].Value);
+    }
+    else
+    {
+        // Se DataInizio e DataFine sono null, assegna loro dei valori di default
+        dataInizio = DateTime.Now.AddDays(1);  // Il giorno successivo a quello corrente
+        dataFine = DateTime.Now.AddDays(2);  // Il secondo giorno successivo
+
+        // Assegna i valori di default ai cookie
+        Response.Cookies["DataInizio"].Value = dataInizio.ToString();
+        Response.Cookies["DataFine"].Value = dataFine.ToString();
+    }
 }
 
 <section>
@@ -25,7 +41,15 @@
                                 <div class="hotel_location">@Model.Indirizzo</div>
                             </div>
                             <div class="ms-lg-auto">
-                                <div class="button book_button"><a href="#">Prenota</a></div>
+                                @if (ViewBag.IsPreferito != null && ViewBag.IsPreferito)
+                                {
+                                    <button class="mybutton book_button trans_200 preferito" data-idstruttura="@Model.IdStruttura">Rimuovi dai preferiti</button>
+                                }
+                                else
+                                {
+                                    <button class="mybutton book_button trans_200 preferito" data-idstruttura="@Model.IdStruttura">Aggiungi ai preferiti</button>
+                                }
+
                                 <div class="hotel_map_link_container">
                                     <div class="hotel_map_link">See Location on Map</div>
                                 </div>
@@ -37,9 +61,9 @@
                                 <div class="hotel_review">
                                     <div class="hotel_review_content">
                                         <div class="hotel_review_title">very good</div>
-                                        <div class="hotel_review_subtitle">100 reviews</div>
+                                        <div class="hotel_review_subtitle">@ViewBag.NumeroRecensioni recensioni</div>
                                     </div>
-                                    <div class="hotel_review_rating text-center">8.1</div>
+                                    <div class="hotel_review_rating text-center">@ViewBag.MediaPunteggio</div>
                                 </div>
                             </div>
                         </div>
@@ -85,8 +109,41 @@
                             }
                         }
                     </div>
+                    <div class="review">
+                        <h3 class="reviews_title">Recensioni</h3>
+                        @foreach (Recensione recensione in Model.Recensioni.Take(3))
+                        {
+                            <div class="row mt-4">
+                                <div class="col-lg-1">
+                                    <div class="review_image">
+                                        <img src="~/Content/img/Cover.PNG" alt="" />
+                                    </div>
+                                </div>
+                                <div class="col-lg-11">
+                                    <div class="review_content">
+                                        <div class="review_title_container">
+                                            <div class="review_title">"We loved the services"</div>
+                                            <div class="review_rating">@recensione.Punteggio</div>
+                                        </div>
+                                        <div class="review_text">
+                                            <p class="review_text">Tetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vulputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer elementum orci eu vehicula pretium. Donec bibendum tristique condimentum.</p>
+                                        </div>
+                                        <div class="review_name">@recensione.Utente.Nome @recensione.Utente.Cognome</div>
+                                        <div class="review_date">12 November 2017</div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        <div class="room_button">
+                            <div class="button book_button trans_200">@Html.ActionLink("Tutte le recensioni", "Recensioni", "Recensione", new { id = Model.IdStruttura }, null)</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+@section Scripts {
+    <script src="~/Scripts/myScripts/preferiti.js"></script>
+}
