--- a/Booking/Views/Struttura/DettaglioStruttura.cshtml
+++ b/Booking/Views/Struttura/DettaglioStruttura.cshtml
@@ -111,7 +111,7 @@
                     </div>
                     <div class="review">
                         <h3 class="reviews_title">Recensioni</h3>
-                        @foreach (Recensione recensione in Model.Recensioni.Take(3))
+                        @foreach (Recensione recensione in Model.Recensione.Take(3))
                         {
                             <div class="row mt-4">
                                 <div class="col-lg-1">
