--- a/Booking/Views/Home/Index.cshtml
+++ b/Booking/Views/Home/Index.cshtml
@@ -1,5 +1,93 @@
 ﻿<main>
-    <h1>HOME</h1>
+    <div class="home">
+        <div class="home_slider_container"></div>
+    </div>
 
     @{ Html.RenderPartial("_Camere"); }
+
+    <div class="intro">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="intro_title text-center">We have the best tours</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="intro_text text-center">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row intro_items">
+                <div class="col-lg-4 intro_col">
+                    <div class="intro_item">
+                        <div class="intro_item_overlay"></div>
+                        <div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
+                            <div class="intro_date">May 25th - June 01st</div>
+                            <div class="button intro_button"><div class="button_bcg"></div><a href="#">see more</a></div>
+                            <div class="intro_center text-center">
+                                <h1>Milano</h1>
+                                <div class="intro_price">From $1450</div>
+                                <div class="rating rating_4">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 intro_col">
+                    <div class="intro_item">
+                        <div class="intro_item_overlay"></div>
+                        <div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
+                            <div class="intro_date">May 25th - June 01st</div>
+                            <div class="button intro_button"><div class="button_bcg"></div><a href="#">see more<span></span><span></span><span></span></a></div>
+                            <div class="intro_center text-center">
+                                <h1>Milano</h1>
+                                <div class="intro_price">From $1450</div>
+                                <div class="rating rating_4">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 intro_col">
+                    <div class="intro_item">
+                        <div class="intro_item_overlay"></div>
+                        <div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
+                            <div class="intro_date">May 25th - June 01st</div>
+                            <div class="button intro_button"><div class="button_bcg"></div><a href="#">see more<span></span><span></span><span></span></a></div>
+                            <div class="intro_center text-center">
+                                <h1>Milano</h1>
+                                <div class="intro_price">From $1450</div>
+                                <div class="rating rating_4">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    @*<a class="btn btn-primary" href="/Paypal/PaymentWithPaypal">Paypal</a>*@
+
 </main>
