--- a/Booking/Views/Preferiti/Preferiti.cshtml
+++ b/Booking/Views/Preferiti/Preferiti.cshtml
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="offers_grid">
-                    @foreach (Preferiti preferito in Model)
+                    @foreach (var preferito in Model)
                     {
                         <div class="row justify-content-center mt-5">
                             <div class="col-lg-1 temp_col"></div>
