--- a/Booking/Views/Shared/_Layout.cshtml
+++ b/Booking/Views/Shared/_Layout.cshtml
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - Applicazione ASP.NET</title>
     <link href="~/Content/StyleSheet.css" rel="stylesheet" />
+    <link href="https:cdnjs.cloudflare.com/ajax/libs/mayer-reset/2.0/reset.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Logo</a>
+        <div class="d-flex align-items-end">
+            <img src="~/Content/img/logo.png" alt="" style="height: 60px;">
+            <div class="logotipo">Travel</div>
+        </div>
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -20,20 +24,25 @@
         </label>
         <nav class="my-navbar">
             <a href="@Url.Action("Index", "Home")" style="--i:0">Home</a>
-            <a href="#" style="--i:1">Lorem</a>
+            <a href="@Url.Action("Registrati", "Utente")" style="--i:1">Registrati</a>
             <a href="#" style="--i:2">Ipsum</a>
+
             @if (!User.Identity.IsAuthenticated)
             {
                 <a href="@Url.Action("Login", "Home")" style="--i:3">Accedi</a>
             }
             else
             {
-                <a href="@Url.Action("Login", "Home")" style="--i:3">@((Session["Utente"] != null) ? Session["Utente"] : "Login")</a>
+                @*<a href="@Url.Action("Login", "Home")" style="--i:3">@((Session["Utente"] != null) ? Session["Utente"] : "Login")</a>*@
+                <a href="#" style="--i:3">@Session["Utente"]</a>
             }
-            <a href="@Url.Action("Logout", "Home")" style="--i:4">Logout</a>
-            <button id="button">drop</button>
-        </nav>
 
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a href="@Url.Action("Logout", "Home")" style="--i:4">Logout</a>
+            }
+        </nav>
+        <button id="button">drop</button>
     </header>
 
     @RenderBody()
@@ -69,9 +78,111 @@
 
 
 
-    <footer>
-        <p>&copy; @DateTime.Now.Year - Applicazione ASP.NET</p>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-3 footer_column">
+                    <div class="footer_col">
+                        <div class="footer_content footer_about">
+                            <div class="d-flex align-items-end">
+                                <img src="~/Content/img/logo.png" alt="" style="height: 60px;">
+                                <div class="logotipo">Travel</div>
+                            </div>
+                            <p class="footer_about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.</p>
+                            <ul class="footer_social_list ps-0">
+                                <li class="footer_social_item"><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                                <li class="footer_social_item"><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                                <li class="footer_social_item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li class="footer_social_item"><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li class="footer_social_item"><a href="#"><i class="fa fa-behance"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 footer_column">
+                    <div class="footer_col">
+                        <div class="footer_title">blog posts</div>
+                        <div class="footer_content footer_blog">
+
+                            <div class="footer_blog_item clearfix">
+                                <div class="footer_blog_image"><img src="~/Content/img/Cover.PNG" alt="#"></div>
+                                <div class="footer_blog_content">
+                                    <div class="footer_blog_title"><a href="blog.html">Travel with us this year</a></div>
+                                    <div class="footer_blog_date">Nov 29, 2017</div>
+                                </div>
+                            </div>
+
+                            <div class="footer_blog_item clearfix">
+                                <div class="footer_blog_image"><img src="~/Content/img/Cover.PNG" alt="#"></div>
+                                <div class="footer_blog_content">
+                                    <div class="footer_blog_title"><a href="blog.html">New destinations for you</a></div>
+                                    <div class="footer_blog_date">Nov 29, 2017</div>
+                                </div>
+                            </div>
+
+                            <div class="footer_blog_item clearfix">
+                                <div class="footer_blog_image"><img src="~/Content/img/Cover.PNG" alt="#"></div>
+                                <div class="footer_blog_content">
+                                    <div class="footer_blog_title"><a href="blog.html">Travel with us this year</a></div>
+                                    <div class="footer_blog_date">Nov 29, 2017</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 footer_column">
+                    <div class="footer_col">
+                        <div class="footer_title">tags</div>
+                        <div class="footer_content footer_tags">
+                            <ul class="tags_list clearfix list-unstyled">
+                                <li class="tag_item"><a href="#">design</a></li>
+                                <li class="tag_item"><a href="#">fashion</a></li>
+                                <li class="tag_item"><a href="#">music</a></li>
+                                <li class="tag_item"><a href="#">video</a></li>
+                                <li class="tag_item"><a href="#">party</a></li>
+                                <li class="tag_item"><a href="#">photography</a></li>
+                                <li class="tag_item"><a href="#">adventure</a></li>
+                                <li class="tag_item"><a href="#">travel</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 footer_column">
+                    <div class="footer_col">
+                        <div class="footer_title">contact info</div>
+                        <div class="footer_content footer_contact">
+                            <ul class="contact_info_list ps-0">
+                                <li class="contact_info_item d-flex flex-row">
+                                    <div><div class="contact_info_icon"><img src="~/Content/img/Icons/wifi.png" alt=""></div></div>
+                                    <div class="contact_info_text">4127 Raoul Wallenber 45b-c Gibraltar</div>
+                                </li>
+                                <li class="contact_info_item d-flex flex-row">
+                                    <div><div class="contact_info_icon"><img src="~/Content/img/Icons/wifi.png" alt=""></div></div>
+                                    <div class="contact_info_text">2556-808-8613</div>
+                                </li>
+                                <li class="contact_info_item d-flex flex-row">
+                                    <div><div class="contact_info_icon"><img src="~/Content/img/Icons/wifi.png" alt=""></div></div>
+                                    <div class="contact_info_text"><a href="mailto:contactme@gmail.com?Subject=Hello" target="_top">contactme@gmail.com</a></div>
+                                </li>
+                                <li class="contact_info_item d-flex flex-row">
+                                    <div><div class="contact_info_icon"><img src="~/Content/img/Icons/wifi.png" alt=""></div></div>
+                                    <div class="contact_info_text"><a href="https://colorlib.com">www.colorlib.com</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
+
+    @*<footer>
+            <p>&copy; @DateTime.Now.Year - Applicazione ASP.NET</p>
+        </footer>*@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
