--- a/Booking/Content/StyleSheet.scss
+++ b/Booking/Content/StyleSheet.scss
@@ -169,6 +169,10 @@ section {
     margin-top: -4px;
 }
 
+/*********************************
+7. Rating
+*********************************/
+
 .rating {
     margin-top: 10px;
 }
@@ -238,10 +242,88 @@ section {
     color: #fa9e1b;
 }
 
-.rating_5 i:nth-child(5) {
-    color: #ef910a;
+.rating_r i::before {
+    font-family: 'FontAwesome';
+    content: "\f006";
+    font-style: normal;
+    font-size: 15px;
+    margin-right: 3px;
 }
 
+.rating_r_1 i:first-child::before {
+    color: #ffeb8d;
+    content: "\f005";
+}
+
+.rating_r_2 i:first-child::before {
+    color: #ffeb8d;
+    content: "\f005";
+}
+
+.rating_r_2 i:nth-child(2)::before {
+    color: #fed46b;
+    content: "\f005";
+}
+
+.rating_r_3 i:first-child::before {
+    color: #ffeb8d;
+    content: "\f005";
+}
+
+.rating_r_3 i:nth-child(2)::before {
+    color: #fed46b;
+    content: "\f005";
+}
+
+.rating_r_3 i:nth-child(3)::before {
+    color: #fbb53d;
+    content: "\f005";
+}
+
+.rating_r_4 i:first-child::before {
+    color: #ffeb8d;
+    content: "\f005";
+}
+
+.rating_r_4 i:nth-child(2)::before {
+    color: #fed46b;
+    content: "\f005";
+}
+
+.rating_r_4 i:nth-child(3)::before {
+    color: #fbb53d;
+    content: "\f005";
+}
+
+.rating_r_4 i:nth-child(4)::before {
+    color: #fa9e1b;
+    content: "\f005";
+}
+
+.rating_r_5 i:first-child::before {
+    color: #ffeb8d;
+    content: "\f005";
+}
+
+.rating_r_5 i:nth-child(2)::before {
+    color: #fed46b;
+    content: "\f005";
+}
+
+.rating_r_5 i:nth-child(3)::before {
+    color: #fbb53d;
+    content: "\f005";
+}
+
+.rating_r_5 i:nth-child(4)::before {
+    color: #fa9e1b;
+    content: "\f005";
+}
+
+.rating_r_5 i:nth-child(5)::before {
+    color: #ef910a;
+    content: "\f005";
+}
 @media only screen and (max-width: 991px) {
     .intro_col {
         margin-bottom: 60px;
@@ -461,9 +543,37 @@ section {
     }
 }
 /*STRUTTURE*/
+
 /*.container {
     padding-bottom: 5rem;
 }*/
+
+$heroHeight: 20rem;
+
+.offer_hero {
+    width: 100%;
+    height: $heroHeight;
+    background-size: cover;
+    background-position: center;
+    background-image: url('img/pexels-rachel-claire-4825701.jpg');
+}
+
+.offer_content {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: $heroHeight;
+    width: 100%;
+}
+
+.offer_title {
+    font-size: 72px;
+    font-weight: 800;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
 
 .hotel-label {
     position: absolute;
@@ -595,6 +705,111 @@ section {
 
 .button:hover a {
     color: #fff;
+}
+
+/*********************************
+9.1 Sorting
+*********************************/
+
+.offer_section {
+    margin-top: 3.6rem;
+    margin-bottom: 5.6rem;
+}
+
+.offers_sorting {
+    display: inline-block;
+}
+
+.offers_sorting > li {
+    display: inline-block;
+    position: relative;
+    width: 166px;
+    height: 50px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #2d2c2c;
+    text-transform: uppercase;
+    line-height: 50px;
+    cursor: pointer;
+    border: solid 2px #dadada;
+    padding-left: 25px;
+    padding-right: 14px;
+    margin-right: 16px;
+}
+
+.distance_item {
+    width: 234px !important;
+}
+
+.offers_sorting li i {
+    float: right;
+    line-height: 48px;
+    color: #929191;
+}
+
+.offers_sorting li ul {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 120%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background: #FFFFFF;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1;
+    box-shadow: 0 15px 25px rgba(63, 78, 100, 0.15);
+    transition: all 0.3s ease;
+}
+
+.offers_sorting > li:hover ul {
+    visibility: visible;
+    opacity: 1;
+    top: calc(100% + 1px);
+}
+
+.offers_sorting li ul li {
+    display: block;
+    text-align: center;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.offers_sorting li ul li span {
+    display: block;
+    height: 40px;
+    line-height: 40px;
+    border-bottom: solid 1px #dddddd;
+    color: #51545f;
+    text-align: left;
+    transition: all 0.3s ease;
+}
+
+.offers_sorting li ul li span:hover {
+    color: #b5aec4;
+}
+
+.offers_sorting li ul li:last-child span {
+    border-bottom: none;
+}
+
+.offers_sorting li span:nth-child(2) {
+    margin-left: 71px;
+}
+
+@media only screen and (max-width: 1199px) {
+    .main_nav_container {
+        margin-right: 121px;
+    }
+
+    .offers_sorting > li {
+        margin-bottom: 17px;
+    }
+
+    .footer_blog_content {
+        padding-left: 74px;
+    }
 }
 
 /*SEARCH*/
@@ -788,10 +1003,19 @@ section {
 
 .hotel-image {
     position: relative;
+    margin-top: 2rem;
 
     img {
         width: 100%;
+        height: 38rem;
+        object-fit: cover;
     }
+}
+
+.hotel_location {
+    font-size: 1.2rem;
+    color: #929191;
+    margin-top: 9px;
 }
 
 .hotel_review_container {
@@ -844,6 +1068,7 @@ section {
 
     p {
         color: #929191;
+        line-height: 1.6;
     }
 }
 
@@ -882,7 +1107,7 @@ section {
 }
 
 .review_image {
-    width: 45px;
+    width: 60px;
     border-radius: 50%;
     overflow: hidden;
 
