--- a/Booking/Views/Struttura/DettaglioStruttura.cshtml
+++ b/Booking/Views/Struttura/DettaglioStruttura.cshtml
@@ -21,10 +21,19 @@
     }
 }
 
+<div class="offer_hero">
+    <div class="offer_content">
+        <div class="offer_title">our offers</div>
+    </div>
+    <div class="home_slider_container"></div>
+</div>
+
+@{ Html.RenderAction("Camere", "Home"); }
+
 <section>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <div class="single_listing">
                     @*INFO*@
                     <div class="hotel_info">
@@ -38,7 +47,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                 </div>
-                                <div class="hotel_location">@Model.Indirizzo</div>
+                                <div class="hotel_location">@Model.Indirizzo, @Model.Citta</div>
                             </div>
                             <div class="ms-lg-auto">
                                 @if (ViewBag.IsPreferito != null && ViewBag.IsPreferito)
@@ -68,12 +77,13 @@
                             </div>
                         </div>
                         <div class="hotel_info_text">
+                            @*<p>@Html.Raw(Model.Descrizione.Replace("\n", "<br />"))</p>*@
                             <p>@Model.Descrizione</p>
                         </div>
                     </div>
                     @*STANZE*@
                     <div class="rooms">
-                        @foreach (var camera in Model.Camera)
+                        @foreach (Camera camera in Model.Camera)
                         {
                             if (!camera.Prenotazione.Any(p => (dataInizio <= p.DataFine && dataFine >= p.DataInizio)))
                             {
@@ -122,11 +132,11 @@
                                 <div class="col-lg-11">
                                     <div class="review_content">
                                         <div class="review_title_container">
-                                            <div class="review_title">"We loved the services"</div>
+                                            <div class="review_title">"@recensione.Titolo"</div>
                                             <div class="review_rating">@recensione.Punteggio</div>
                                         </div>
                                         <div class="review_text">
-                                            <p class="review_text">Tetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vulputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer elementum orci eu vehicula pretium. Donec bibendum tristique condimentum.</p>
+                                            <p class="review_text">@recensione.Commento</p>
                                         </div>
                                         <div class="review_name">@recensione.Utente.Nome @recensione.Utente.Cognome</div>
                                         <div class="review_date">12 November 2017</div>
