--- a/Booking/Content/StyleSheet.scss
+++ b/Booking/Content/StyleSheet.scss
@@ -995,6 +995,10 @@ $heroHeight: 20rem;
 }
 /*STRUTTURA*/
 
+.hotel_section {
+    margin-top: 0;
+}
+
 .single_listing {
     width: 100%;
     padding-top: 100px;
@@ -1056,6 +1060,13 @@ $heroHeight: 20rem;
     text-transform: uppercase;
 }
 
+.hotel_preferito {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .hotel_review_subtitle {
     font-size: 12px;
     font-weight: 600;
@@ -1100,10 +1111,40 @@ $heroHeight: 20rem;
         width: 100%;
     }
 }
+
+.room_title {
+    font-size: 18px;
+    font-weight: 600;
+    color: #2d2c2c;
+    margin-top: -5px;
+}
+
+.room_price {
+    font-size: 16px;
+    font-weight: 600;
+    color: #929191;
+    margin-top: 9px;
+}
+
+.room_text {
+    font-size: 16px;
+    font-weight: 600;
+    color: #fa9e1b;
+    margin-top: 6px;
+}
+
+.room_extra {
+    font-size: 14px;
+    font-weight: 400;
+    color: #2d2c2c;
+    margin-top: 5px;
+}
+
 /*Recensioni*/
 
-.review {
-    margin-bottom: 91px;
+.reviews {
+    margin-bottom: 90px;
+    margin-top: 90px;
 }
 
 .review_image {
@@ -1114,6 +1155,10 @@ $heroHeight: 20rem;
     img {
         width: 100%;
     }
+}
+
+.reviews_container {
+    margin-top: 60px;
 }
 
 .review_title_container {
@@ -1173,6 +1218,7 @@ $heroHeight: 20rem;
     color: #2d2c2c;
     text-transform: uppercase;
 }
+
 /*MOODAL*/
 
 .mymodal {
@@ -1651,10 +1697,6 @@ body {
     border: solid 1px #fa9e1b;
     border-radius: 50%;
     text-align: center;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
     transition: all 200ms ease;
     margin-right: 9px;
 }
@@ -1675,16 +1717,8 @@ body {
     position: relative;
     color: #FFFFFF;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
     transform: translateY(-50%);
     font-size: 12px;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
     transition: all 200ms ease;
 }
 
@@ -1760,10 +1794,6 @@ body {
     margin-right: 9px;
     margin-bottom: 9px;
     border: solid 1px #fa9e1b;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
     transition: all 200ms ease;
 }
 
@@ -1854,10 +1884,6 @@ body {
     color: #685677;
     text-transform: uppercase;
     line-height: 2;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
     transition: all 200ms ease;
 }
 
