--- a/Booking/Views/Camere/RisultatiRicerca.cshtml
+++ b/Booking/Views/Camere/RisultatiRicerca.cshtml
@@ -83,11 +83,11 @@
                                 <div class="aaa">
                                     <div>
                                         <div class="top">
-                                            <p class="prezzo">100$</p>
+                                            <p class="prezzo"> 100$</p>
                                             <div class="offer_reviews">
                                                 <div class="offer_reviews_content">
                                                     <div class="offer_reviews_title">very good</div>
-                                                    <div class="offer_reviews_subtitle">100 reviews</div>
+                                                    <div class="offer_reviews_subtitle">@strutturaPunteggi.TotaleRecensioni recensioni</div>
                                                 </div>
                                                 <div class="offer_reviews_rating text-center">
                                                     @if (strutturaPunteggi.MediaPunteggio > 0)
