--- a/Booking/Content/StyleSheet.scss
+++ b/Booking/Content/StyleSheet.scss
@@ -14,15 +14,6 @@ section {
     margin-top: 5.6rem;
 }
 
-
-.logotipo {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 30px;
-    color: #f4f4f8;
-    font-weight: 800;
-    text-transform: uppercase;
-}
-
 /*HOME*/
 .home {
     width: 100%;
@@ -324,6 +315,7 @@ section {
     color: #ef910a;
     content: "\f005";
 }
+
 @media only screen and (max-width: 991px) {
     .intro_col {
         margin-bottom: 60px;
@@ -331,6 +323,56 @@ section {
 }
 
 /*BOTTONE*/
+
+/*nav button*/
+.button-64 {
+    align-items: center;
+    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 18px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.button-64:active,
+.button-64:hover {
+    outline: 0;
+}
+
+.button-64 span {
+    background-color: rgb(5, 6, 45);
+    padding: 10px 24px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+}
+
+.button-64:hover span {
+    background: none;
+}
+
+@media (max-width: 1100px) {
+    .button-64 {
+        min-width: 0px;
+    }
+}
+
+/*Purple button*/
 
 .mybutton {
     display: block;
@@ -361,11 +403,32 @@ section {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-
-    .logo {
+    /*    .logo {
         font-size: 2rem;
         text-decoration: none;
         font-weight: 700;
+    }*/
+
+    .logo_nav {
+        height: 60px;
+    }
+
+    .logotipo {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 30px;
+        color: #f4f4f8;
+        font-weight: 800;
+        text-transform: uppercase;
+    }
+
+    @media (max-width: 450px) {
+        .logo_nav {
+            height: 35px;
+        }
+
+        .logotipo {
+            font-size: 25px;
+        }
     }
 
     #check {
@@ -433,7 +496,7 @@ section {
 }
 
 #check:checked ~ .my-navbar {
-    height: 17.7rem;
+    height: 15.7rem;
 }
 /*Dropdown*/
 
@@ -450,8 +513,8 @@ section {
     width: 230px;
     margin-top: 10px;
     padding-left: 0;
-    right: 125px;
-    top: 195px;
+    right: 112px;
+    top: 215px;
     z-index: 300;
 }
 
@@ -483,9 +546,14 @@ section {
     background: #f2f2f2;
 }
 
-.list .option:nth-child(1) {
+.list .option:first-child {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+}
+
+.list .option:last-child {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 /*BREAKPOINTS*/
@@ -511,7 +579,7 @@ section {
             left: 0;
             width: 100%;
             height: 0;
-            background: blue;
+            background: linear-gradient(to right, #fa9e1b, #8d4fff);
             overflow: hidden;
             transition: .3s ease;
 
@@ -520,12 +588,18 @@ section {
                 font-size: 1.1rem;
                 margin: 1.5rem 0;
                 text-align: center;
-                color: yellow;
+                text-transform: uppercase;
+                color: white;
                 transform: translateY(-50px);
                 opacity: 0;
                 transition: .3s ease;
             }
         }
+    }
+
+    #button {
+        position: absolute;
+        right: 6em;
     }
 
     #check:checked ~ .icons #menu-icon {
@@ -1096,6 +1170,17 @@ $heroHeight: 20rem;
         opacity: 1;
     }
 }
+
+@media (max-width: 992px) {
+    .hotel_preferito {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 1rem;
+    }
+}
+
 /*Stanze*/
 
 .rooms {
@@ -1143,6 +1228,11 @@ $heroHeight: 20rem;
 /*Recensioni*/
 
 .reviews {
+    /*margin-bottom: 90px;*/
+    margin-top: 90px;
+}
+
+.all_reviews {
     margin-bottom: 90px;
     margin-top: 90px;
 }
@@ -1217,6 +1307,71 @@ $heroHeight: 20rem;
     font-weight: 600;
     color: #2d2c2c;
     text-transform: uppercase;
+}
+
+/*.review_button {
+    border-radius: 27px;
+    background: linear-gradient(to right, #fa9e1b, #8d4fff);
+
+    a {
+        display: block;
+        font-size: 13px;
+        font-weight: 700;
+        color: #fff;
+        text-transform: uppercase;
+        line-height: 53px;
+        white-space: nowrap;
+        text-align: center;
+        text-decoration: none;
+    }
+}*/
+
+.rw_button {
+    border-radius: 27px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow: hidden;
+
+    a {
+        display: block;
+        font-size: 13px;
+        font-weight: 700;
+        color: #fff;
+        text-transform: uppercase;
+        line-height: 53px;
+        white-space: nowrap;
+        text-align: center;
+        text-decoration: none;
+    }
+}
+
+.rw_button:hover .button_bcg {
+    left: -100%;
+}
+
+.pagination {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
 }
 
 /*MOODAL*/
@@ -1646,10 +1801,36 @@ body {
         padding: 20px 10px;
     }
 }
+
 /*********************************
-13. FOOTER
+FAVORITI
 *********************************/
 
+.empty_list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.fv_list {
+    list-style-type: none;
+}
+
+.fv_section {
+    margin-top: 5.6rem;
+    margin-bottom: 5.6rem;
+}
+
+.fav_card {
+    .button {
+        width:100%;
+        border-radius: 0;
+    }
+}
+/*********************************
+FOOTER
+*********************************/
 .logo a img {
     display: inline-block;
     vertical-align: baseline;
@@ -1662,6 +1843,14 @@ body {
     padding-top: 113px;
     padding-bottom: 104px;
     background: #31124b;
+
+    .logotipo {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 30px;
+        color: #f4f4f8;
+        font-weight: 800;
+        text-transform: uppercase;
+    }
 }
 
 .footer_title {
@@ -1949,4 +2138,183 @@ body {
     .search_button {
         margin-top: 9px;
     }
+}
+
+
+/*********************************
+RIEPILOGO Prenotazione
+*********************************/
+
+.receipt_section {
+    margin-top: 5.6rem;
+    margin-bottom: 5.6rem;
+}
+
+.receipt_section::after {
+    content: "";
+    background-image: url(img/pexels-asad-photo-maldives-15031960.jpg);
+    background-size: cover;
+    background-position: center;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    z-index: -1;
+}
+
+.fadeIn {
+    animation: fadein 5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+label {
+    display: block;
+}
+/* Model Container */
+
+.model {
+    width: 900px;
+    height: 700px;
+    background: white;
+    /*   font-size: 0; */
+    color: white;
+    position: relative;
+    /*   animation: slideInFromLeft 1s cubic-bezier(0.68, -0.55, 0.265, 1.55); */
+    animation-fill-mode: forwards;
+}
+
+/*.model:after {
+    width: 30px;
+    content: 'X';
+    height: 30px;
+    color: black;
+    position: absolute;
+    text-align: center;
+    padding-top: 3px;
+    top: 0;
+    right: -30px;
+    background-color: #bdc3c7;
+}*/
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.receipt_room {
+    width: 50%;
+    height: 100%;
+    background: url(https://images.unsplash.com/photo-1470274038469-958113db2384?auto=format&fit=crop&w=1875&q=80) no-repeat center center;
+    background-size: cover;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+}
+
+.text-cover {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 20px
+}
+
+.text-cover > * {
+    margin: 10px 0;
+}
+
+.text-cover h1 {
+    font-size: 1.8rem;
+}
+
+.text-cover .price {
+    color: #e67e22;
+}
+
+.text-cover .price span {
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+.payment {
+    width: 50%;
+    height: 100%;
+    color: #34495e;
+    display: inline-block;
+}
+
+.receipt-box {
+    padding: 20px 20px;
+    border-bottom: 1px solid #34495e;
+}
+
+.receipt-box h3,
+.payment-info h3 {
+    margin-bottom: 2rem;
+}
+
+.payment-info {
+    padding: 20px;
+}
+
+
+input[type=text] {
+    width: 100%;
+    padding: 8px 10px 10px;
+    margin: 15px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.btn {
+    padding: 15px 25px;
+    border: none;
+    color: white;
+    width: 100%;
+    display: block;
+    background: #9b59b6;
+    text-transform: uppercase;
+}
+
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    background-color: transparent;
+}
+
+.table td {
+    font-size: 0.8rem;
+    font-style: italic;
+    padding: .25rem;
+    vertical-align: top;
+}
+
+
+.table td:nth-child(2) {
+    text-align: right;
+}
+
+.highlight {
+    font-weight: 800;
+    font-size: medium;
 }
