--- a/Booking/Views/Recensione/Recensioni.cshtml
+++ b/Booking/Views/Recensione/Recensioni.cshtml
@@ -1,28 +1,51 @@
-﻿@model IEnumerable<Booking.Recensione>
+﻿@model PagedList.IPagedList<Booking.Recensione>
+@using PagedList.Mvc;
 
-<div class="review">
-    <h3 class="reviews_title">Recensioni</h3>
-    @foreach (Recensione recensione in Model)
-    {
-        <div class="row mt-4">
-            <div class="col-lg-1">
-                <div class="review_image">
-                    <img src="~/Content/img/Cover.PNG" alt="" />
-                </div>
-            </div>
-            <div class="col-lg-11">
-                <div class="review_content">
-                    <div class="review_title_container">
-                        <div class="review_title">"We loved the services"</div>
-                        <div class="review_rating">@recensione.Punteggio</div>
+<div class="offer_hero">
+    <div class="offer_content">
+        <div class="offer_title">Reviews</div>
+    </div>
+    <div class="home_slider_container"></div>
+</div>
+
+<div class="container">
+    <div class="all_reviews">
+        <h3 class="reviews_title">Recensioni</h3>
+        <div class="reviews_container">
+            @foreach (Recensione recensione in Model)
+            {
+                <div class="review row mt-4">
+                    <div class="col-lg-1">
+                        <div class="review_image">
+                            <img src="~/Content/img/Cover.PNG" alt="" />
+                        </div>
                     </div>
-                    <div class="review_text">
-                        <p class="review_text">Tetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vulputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer elementum orci eu vehicula pretium. Donec bibendum tristique condimentum.</p>
+                    <div class="col-lg-11">
+                        <div class="review_content">
+                            <div class="review_title_container">
+                                <div class="review_title">"@recensione.Titolo"</div>
+                                <div class="review_rating">@recensione.Punteggio</div>
+                            </div>
+                            <div class="review_text">
+                                <p class="review_text">@recensione.Commento</p>
+                            </div>
+                            <div class="review_name">@recensione.Utente.Nome @recensione.Utente.Cognome</div>
+                            <div class="review_date">@recensione.Data.ToString("dd MMMM yyyy")</div>
+                        </div>
                     </div>
-                    <div class="review_name">@recensione.Utente.Nome @recensione.Utente.Cognome</div>
-                    <div class="review_date">12 November 2017</div>
                 </div>
+            }
+        </div>
+        <div class="pagination mt-5">
+            @Html.PagedListPager(Model, page => Url.Action("Recensioni", new { page }),
+            new PagedListRenderOptions
+            {
+                DisplayLinkToNextPage = PagedListDisplayMode.Always,
+                DisplayLinkToPreviousPage = PagedListDisplayMode.Always
+            })
+            <div>
+                Visualizzati 1 – 10
             </div>
         </div>
-    }
+    </div>
 </div>
