--- a/Booking/Views/Utente/DatiPersonali.cshtml
+++ b/Booking/Views/Utente/DatiPersonali.cshtml
@@ -15,6 +15,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IdUtente)
         @Html.HiddenFor(model => model.Ruolo)
+        @Html.HiddenFor(model => model.PasswordHash)
+        @Html.HiddenFor(model => model.Salt)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Cognome, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -48,13 +50,6 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group mt-3">
             <div class="col-md-offset-2 col-md-10">
@@ -63,7 +58,3 @@
         </div>
     </div>
 }
-
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
